# pappl-retrofit

./: .gitignore  AUTHORS  CONTRIBUTING.md  COPYING  DEVELOPING.md  Makefile.am  NOTICE  README.md  autogen.sh  configure.ac  libpappl-retrofit.pc.in
.github/workflows/: build.yml  codeql-analysis.yml
data/: testpage.ps
examples/: drv.cxx  test-printer-app.c
legacy/: legacy-printer-app.1  legacy-printer-app.c  legacy-printer-app.service  legacy-printer-app.service.in
pappl-retrofit/: base.h  cups-backends-private.h  cups-backends.c  cups-backends.h  cups-side-back-channel-private.h  cups-side-back-channel.c  libcups2-private.h  pappl-retrofit-private.h  pappl-retrofit.c  pappl-retrofit.h  pappl-sane.c  pappl-sane.h  print-job-private.h  print-job.c  print-job.h  scan.c  web-interface-private.h  web-interface.c  web-interface.h
test/: test-legacy-printer.sh
